--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
         <title>Ma page d'accueil</title>
         <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="./assets/css/custom.css" rel="stylesheet">
+        <link href="./assets/css/menu.css" rel="stylesheet">
     </head>
 
     <body>
         <header class="header">
             <h1>Accueil</h1>
         </header>
+        <ul>
+            <li><a href="#">Item 1</a></li>
+            <li><a href="#">Item 2</a></li>
+            <li><a href="#">Item plus long</a></li>
+           </ul>
         
         <main>
             <!-- Here goes the form -->
