--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
             <!-- Here goes the form -->
         </main>
         <script src="./assets/js/main.js"></script>
+        <script src="./assets/js/link.js"></script>
     </body>
 </html>
