Insertion texte Cedric

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <body>
         <header class="header">
             <h1>Accueil</h1>
+            <h1>Ceci est le texte de Cédric</h1>
+
         </header>
         
         <main>
             <!-- Here goes the form -->
+
         </main>
         <script src="./assets/js/main.js"></script>
     </body>
