--- a/index.html
+++ b/index.html
@@ -16,4 +16,7 @@
         </main>
         <script src="./assets/js/main.js"></script>
     </body>
+    <footer>
+        <p>test gfi :© 2018 Gandalf</p>
+    </footer>
 </html>
