--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!doctype html>
 <html>
-    <head>
-        <title>Ma page d'accueil</title>
-        <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="./assets/css/custom.css" rel="stylesheet">
-        <link href="./assets/css/menu.css" rel="stylesheet">
-    </head>
 
-    <body>
-        <header class="header">
-            <h1>Accueil</h1>
-            <h1>Ceci est le texte de Cédric</h1>
+<head>
+    <title>Ma page d'accueil</title>
+    <link href="./node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/css/custom.css" rel="stylesheet">
+    <link href="./assets/css/menu.css" rel="stylesheet">
+</head>
 
-        </header>
-        <ul>
-            <li><a href="#">Item 1</a></li>
-            <li><a href="#">Item 2</a></li>
-            <li><a href="#">Item plus long</a></li>
-           </ul>
-        
-        <main>
-            <!-- Here goes the form -->
+<body>
+    <header class="header">
+        <h1>Accueil</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Item 1</a></li>
+                <li><a href="#">Item 2</a></li>
+                <li><a href="#">Item plus long</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        </main>
-        <script src="./assets/js/main.js"></script>
-        <script src="./assets/js/link.js"></script>
-    </body>
+
+    <main>
+        <p>Ceci est le texte de Cédric</p>
+
+    </main>
     <footer>
         <p>test gfi :© 2018 Gandalf</p>
     </footer>
+    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/link.js"></script>
+</body>
+
+
 </html>
