--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="#">Item 1</a></li>
             <li><a href="#">Item 2</a></li>
-            <li><a href="#">Item plus long</a></li>
+            <li><a href="contact.html" target="_blank">contact</a></li>
            </ul>
         
         <main>
